@@ -63,12 +63,13 @@ RUN  cd /code;\
      chmod 755 twelf-server;\
      cp twelf-server /usr/local/bin
 
-### JVM ###
-RUN apt-get install -y openjdk-6-jdk
-
-RUN useradd runner -m -d /home/runner -s /bin/bash
+## user runner ##
 
 RUN apt-get install -y sudo
+
+RUN apt-get install -y dos2unix
+
+RUN useradd -m -d /home/runner -s /bin/bash runner
 
 ## From now on, everything is executed as user runner ##
 ENV HOME /home/runner
@@ -76,24 +77,13 @@ RUN env
 
 RUN sudo -u runner mkdir /home/runner/bin
 
-### Scala / SBT ###
-RUN cd /home/runner/bin;\
-    sudo -u runner wget -nv http://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.13.1/sbt-launch.jar;\
-    sudo -u runner echo 'SBT_OPTS="-Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M"; java $SBT_OPTS -jar `dirname $0`/sbt-launch.jar "$@"' | sudo -u runner tee sbt;\
-    sudo -u runner chmod 755 sbt;\
-    cd /tmp;\
-    sudo -u runner /home/runner/bin/sbt
-
-### Clojure / Leiningen ###
-RUN cd /home/runner/bin;\
-    sudo -u runner wget -nv https://raw.github.com/technomancy/leiningen/stable/bin/lein;\
-    chmod 755 lein;\
-    cd /tmp;\
-    sudo -u runner /home/runner/bin/lein
-
 ## Install io.livecode.ch scripts ##
 ADD dkr/livecode-install /tmp/livecode-install
 ADD dkr/livecode-run /tmp/livecode-run
+ADD dkr/livecode-repl-install /tmp/livecode-repl-install
+ADD dkr/livecode-repl-run /tmp/livecode-repl-run
 RUN cd /home/runner/bin;\
     sudo -u runner cp /tmp/livecode-install .;\
-    sudo -u runner cp /tmp/livecode-run .
+    sudo -u runner cp /tmp/livecode-run .;\
+    sudo -u runner cp /tmp/livecode-repl-install .;\
+    sudo -u runner cp /tmp/livecode-repl-run .
